@@ -144,6 +144,9 @@ Release 2.1.2 - UNRELEASED
     HDFS-5255. Distcp job fails with hsftp when https is enabled in insecure
     cluster. (Arpit Agarwal)
 
+    HDFS-5279. Guard against NullPointerException in NameNode JSP pages before
+    initialization of FSNamesystem. (cnauroth)
+
 Release 2.1.1-beta - 2013-09-23
 
   INCOMPATIBLE CHANGES
